# test_work

./: README.md  app.py  pyproject.toml  requirements.txt
data/: parsed_resume.json
notebooks/: research.ipynb
src/: main.py
src/api/endpoints/: pdf_router.py
src/api/routers/: pdf_router.py
src/config/: config.py
src/core/: logging.py
src/data/: parsed_resume.json
src/models/: combine.py  preprocessing.py  rewrite_cv.py  score.py
src/schemas/: prompts.py
src/services/: preprocessing.py  rewrite_cv.py  score.py
src/utils/: helper.py
