[project]
name = "cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.7",
    "nltk>=3.9.1",
    "pdfminer-six==20221105",
    "pydantic>=2.11.7",
    "pyresparser>=1.0.6",
    "python-multipart>=0.0.20",
    "sentence-transformers==3.0.1",
    "transformers==4.41.2",
    "uvicorn>=0.35.0",
]
